# mcq-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/mcq_bot/: client.py  main.py  schedule_job.py  settings.py
src/mcq_bot/db/: connection.py  db_types.py  main.py  schema.py  types.py  utils.py
src/mcq_bot/db/parsers/: base.py  excel.py  openai.py  utils.py
src/mcq_bot/handlers/: admin.py  exam.py  next_question.py  question.py  question_callback.py  register.py  start.py  stats.py
src/mcq_bot/managers/: answer.py  attempt.py  base.py  filename.py  question.py  user.py  utils.py
src/mcq_bot/scripts/: add_questions.py
src/mcq_bot/senders/: send_nudge.py  send_question.py  sender_types.py
src/mcq_bot/utils/: logger.py  message.py
tests/db/: test_question_bulk_add.py
tests/utils/: test_message.py
